Bug 155833 - svg import inverses rows of checkerboard colored image
Summary: svg import inverses rows of checkerboard colored image
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.5.4.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2 ta...
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-14 14:20 UTC by 2017
Modified: 2023-06-22 11:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
image to import to reproduce bug (1.76 KB, image/svg+xml)
2023-06-14 14:21 UTC, 2017
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 2017 2023-06-14 14:20:49 UTC
Description:
importing a 3x3 multi-colored checkerboard pattern from svg into libreoffice inverses the rows of the color pattern

Steps to Reproduce:
1. open libreoffice write, impress or draw
2. import the svg image attached to this report
3. observe the inversion of the row order

Actual Results:
colors from blue (1) to dark red (9) as
7 8 9
4 5 6
1 2 3


Expected Results:
colors from blue (1) to dark red (9) as
1 2 3
4 5 6
7 8 9


Reproducible: Always


User Profile Reset: No

Additional Info:
svg was made with inkscape, test with older libreoffice version and problem was there as well

Detailed version info:
Version: 7.5.4.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 32; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Ubuntu package version: 4:7.5.4~rc2-0ubuntu0.20.04.1~lo1
Calc: threaded
Comment 1 2017 2023-06-14 14:21:28 UTC
Created attachment 187909 [details]
image to import to reproduce bug
Comment 2 Xisco Faulí 2023-06-14 15:10:06 UTC
Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4453677bdc9cb71e7e68291b14ca0167a7a15e1b
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
-
The problem is transform="matrix(1,0,0,-1,0,1)"
Comment 3 Xisco Faulí 2023-06-14 15:40:28 UTC
actually the problem is in width="1". if it's changed to width="2" then it works...
Comment 4 Commit Notification 2023-06-15 10:40:21 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/472d7ce57bdf1473538dda23c9328d44cdf816c8

tdf#155833: apply transform to image even if target is equal to viewbox

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-06-15 18:53:26 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/0718628ee0173abb703b9d1999e89eabc26476c9

tdf#155833: apply transform to image even if target is equal to viewbox

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 2017 2023-06-16 10:37:41 UTC
thanks for fixing!
Comment 7 Commit Notification 2023-06-22 11:09:27 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/7bc850d1d732c604537473c6124dece1ad0dfd86

tdf#155833: apply transform to image even if target is equal to viewbox

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.