tdf#155833: apply transform to image even if target is equal to viewbox

Change-Id: Ie820528384d096c6a332e2abd0095f68c7f64a0f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153103
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 6dce36484bfcac711251710697dca961fd77ca20)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153082
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153153